Fix summary section and reservation completeion layout issues

--- a/src/targets/meandall/styles/views/reservation.less
+++ b/src/targets/meandall/styles/views/reservation.less
@@ -539,15 +539,20 @@ reservation-hotel-details {
         min-height: 145px;
       }
       tbody {
-        display: block;
+        &.single-row-data {
+          tr {
+            th,
+            td {
+              width: 50%;
+              display: block;
+              float: left;
+            }
+          }
+        }
         tr {
-          display: block;
           th,
           td {
-            display: block;
-            width: 50%;
             padding: 0;
-            float: left;
             box-sizing: border-box;
           }
           td {
